test/data/syntax-errors/bad-statement.gs
Num a = p
printes a
9 - 2;
givesUs a;
